--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,7 +64,8 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.2.0",
     "vaul": "^1.1.2",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "serve": "^14.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -81,8 +82,5 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vitest": "^1.0.4"
-  },
-  "dependencies": {
-    "serve": "^14.2.0"
   }
 }
