--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^7.0.10",
     "razorpay": "^2.9.2",
     "socket.io": "^4.5.4",
+    "twilio": "^5.10.6",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
@@ -48,6 +49,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
     "@types/supertest": "^6.0.2",
+    "@types/twilio": "^3.19.2",
     "jest": "^29.7.0",
     "prisma": "^5.7.0",
     "supertest": "^6.3.3",
