--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build": "npm run build:backend && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd server && npm run build",
+    "preview": "concurrently \"npm run start:backend\" \"npm run preview:frontend\"",
+    "preview:frontend": "cd frontend && npm run preview",
     "migrate": "cd server && npm run migrate:dev",
     "seed": "cd server && npm run seed",
     "test": "npm run test:frontend && npm run test:backend",
@@ -23,7 +25,8 @@
     "lint:frontend": "cd frontend && npm run lint",
     "lint:backend": "cd server && npm run lint",
     "start": "npm run start:backend",
-    "start:backend": "cd server && npm start"
+    "start:backend": "cd server && npm start",
+    "db:studio": "npm run studio --workspace=server"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
