--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,11 @@
     "test:watch": "jest --watch",
     "test:e2e": "jest --config jest.e2e.config.js",
     "lint": "eslint src --ext .ts",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "latest",
     "@react-pdf/renderer": "^3.4.0",
     "@types/nodemailer": "^7.0.3",
     "bcrypt": "^5.1.1",
@@ -51,7 +52,9 @@
     "@types/supertest": "^6.0.2",
     "@types/twilio": "^3.19.2",
     "jest": "^29.7.0",
-    "prisma": "^5.7.0",
+    "prisma": "latest",
+    "prisma-dbml-generator": "^0.12.0",
+    "prisma-erd-generator": "^2.4.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
