docs: update readme and standardize env vars

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,8 +1,2 @@
-# API Configuration
-VITE_API_URL="http://localhost:3000/api"
-
-# Real-time Configuration
-VITE_SOCKET_URL="http://localhost:3000"
-
-# Feature Flags (Optional)
-# VITE_ENABLE_ANALYTICS=true
+VITE_API_URL=http://localhost:5000/api
+VITE_SOCKET_URL=http://localhost:5000
