--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,7 @@
     "studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "latest",
+    "@prisma/client": "^5.22.0",
     "@react-pdf/renderer": "^3.4.0",
     "@types/nodemailer": "^7.0.3",
     "bcrypt": "^5.1.1",
@@ -52,7 +52,7 @@
     "@types/supertest": "^6.0.2",
     "@types/twilio": "^3.19.2",
     "jest": "^29.7.0",
-    "prisma": "latest",
+    "prisma": "^5.22.0",
     "prisma-dbml-generator": "^0.12.0",
     "prisma-erd-generator": "^2.4.2",
     "supertest": "^6.3.3",
