fix: exclude tests and add types to deps for Render build

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,6 +21,6 @@
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "tests", "prisma/seed.ts"]
+  "exclude": ["node_modules", "dist", "tests", "prisma/seed.ts", "src/__tests__"]
 }
 
