--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,14 @@
     "socket.io": "^4.5.4",
     "twilio": "^5.10.6",
     "winston": "^3.11.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.0",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
