fix: simplify vercel.json build config

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,4 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite"
+  "buildCommand": "npm install && npx vite build",
+  "outputDirectory": "dist"
 }
