--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,4 +1,7 @@
 {
   "buildCommand": "npm install && npx vite build",
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
