--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,12 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@react-pdf/renderer": "^3.4.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.0",
     "@types/nodemailer": "^7.0.3",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -36,17 +42,12 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.10",
     "razorpay": "^2.9.2",
+    "resend": "^6.6.0",
     "socket.io": "^4.5.4",
     "twilio": "^5.10.6",
+    "typescript": "^5.3.2",
     "winston": "^3.11.0",
-    "zod": "^3.22.4",
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^20.10.0",
-    "typescript": "^5.3.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
