feat: Add booking availability system and deployment configs

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,12 @@
+# MH26 Services Frontend - Environment Variables
+# Copy this file to .env and fill in your values
+
+# API URL (Backend)
 VITE_API_URL=http://localhost:5000/api
+
+# Socket.io URL (Backend)
 VITE_SOCKET_URL=http://localhost:5000
+
+# For production (Vercel), set these in Vercel dashboard:
+# VITE_API_URL=https://your-render-backend.onrender.com/api
+# VITE_SOCKET_URL=https://your-render-backend.onrender.com
