--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,8 @@
 {
-  "buildCommand": "npm install && npx vite build",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "framework": "vite",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
