--- a/server/.env.example
+++ b/server/.env.example
@@ -1,44 +1,33 @@
-# Database Connection
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DB?schema=public"
+# MH26 Services Backend - Environment Variables
+# Copy this file to .env and fill in your values
 
-# Authentication Secrets (Generate strong random strings)
-JWT_ACCESS_SECRET="changeme_access_token_secret_min_32_chars"
-JWT_REFRESH_SECRET="changeme_refresh_token_secret_min_32_chars"
-JWT_ACCESS_EXPIRES_IN="15m"
-JWT_REFRESH_EXPIRES_IN="7d"
+# Server
+NODE_ENV=development
+PORT=5000
 
-# Server Configuration
-PORT=3000
-NODE_ENV="development"
-CORS_ORIGIN="http://localhost:5173"
+# Database (PostgreSQL)
+DATABASE_URL=postgresql://username:password@localhost:5432/mh26_services
 
-# Frontend Integration
-FRONTEND_URL="http://localhost:5173"
+# JWT
+JWT_SECRET=your-super-secret-jwt-key-here
+JWT_EXPIRES_IN=7d
 
-# Email Service (SMTP)
-SMTP_HOST="smtp.gmail.com"
-SMTP_PORT=587
-SMTP_USER="your_email@gmail.com"
-SMTP_PASS="your_app_specific_password"
-SMTP_FROM="noreply@mh26services.com"
+# CORS (Frontend URL)
+CORS_ORIGIN=http://localhost:5173
+CLIENT_URL=http://localhost:5173
+FRONTEND_URL=http://localhost:5173
 
-# SMS Service (Twilio)
-TWILIO_ACCOUNT_SID="your_twilio_sid"
-TWILIO_AUTH_TOKEN="your_twilio_auth_token"
-TWILIO_PHONE_NUMBER="your_twilio_phone_number"
-TWILIO_FROM_NUMBER="your_twilio_phone_number"
+# Email - Option 1: Resend (Recommended for Render)
+RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxx
+RESEND_FROM_EMAIL=MH26 Services <onboarding@resend.dev>
 
-# Payment Gateway (Razorpay)
-RAZORPAY_KEY_ID="your_razorpay_key_id"
-RAZORPAY_KEY_SECRET="your_razorpay_key_secret"
-RAZORPAY_WEBHOOK_SECRET="your_razorpay_webhook_secret"
+# Email - Option 2: SMTP (Gmail - blocked on Render free tier)
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password
+# SMTP_FROM=your-email@gmail.com
 
-# Object Storage (AWS S3 / MinIO)
-AWS_ACCESS_KEY_ID="your_access_key"
-AWS_SECRET_ACCESS_KEY="your_secret_key"
-AWS_S3_BUCKET="mh26-services-uploads"
-AWS_REGION="ap-south-1"
-AWS_ENDPOINT="http://localhost:9000"
-
-# Redis (Optional)
-REDIS_URL="redis://localhost:6379"
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=60000
+RATE_LIMIT_MAX_REQUESTS=100
