--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "db:studio": "npm run studio --workspace=server"
   },
   "devDependencies": {
-    "concurrently": "8.2.2"
+    "concurrently": "^8.2.2"
   }
 }
