--- a/server/package.json
+++ b/server/package.json
@@ -21,53 +21,53 @@
     "studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "5.22.0",
-    "@react-pdf/renderer": "3.4.0",
-    "@types/bcrypt": "5.0.2",
-    "@types/cors": "2.8.17",
-    "@types/express": "4.17.21",
-    "@types/jsonwebtoken": "9.0.5",
-    "@types/multer": "1.4.11",
-    "@types/node": "20.10.0",
-    "@types/nodemailer": "7.0.3",
-    "bcrypt": "5.1.1",
-    "cors": "2.8.5",
-    "dotenv": "16.3.1",
-    "express": "4.18.2",
-    "express-rate-limit": "7.1.5",
-    "express-validator": "7.0.1",
-    "helmet": "7.1.0",
-    "ioredis": "5.3.2",
-    "jsonwebtoken": "9.0.2",
-    "multer": "1.4.5-lts.1",
-    "nodemailer": "7.0.10",
-    "razorpay": "2.9.2",
-    "resend": "6.6.0",
-    "socket.io": "4.5.4",
-    "twilio": "5.10.6",
-    "typescript": "5.3.2",
-    "winston": "3.11.0",
-    "zod": "3.22.4"
+    "@prisma/client": "^5.22.0",
+    "@react-pdf/renderer": "^3.4.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.0",
+    "@types/nodemailer": "^7.0.3",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.10",
+    "razorpay": "^2.9.2",
+    "resend": "^6.6.0",
+    "socket.io": "^4.5.4",
+    "twilio": "^5.10.6",
+    "typescript": "^5.3.2",
+    "winston": "^3.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/bcrypt": "5.0.2",
-    "@types/cors": "2.8.17",
-    "@types/express": "4.17.21",
-    "@types/jest": "29.5.8",
-    "@types/jsonwebtoken": "9.0.5",
-    "@types/multer": "1.4.11",
-    "@types/node": "20.10.0",
-    "@types/supertest": "6.0.2",
-    "@types/twilio": "3.19.2",
-    "jest": "29.7.0",
-    "prisma": "5.22.0",
-    "prisma-dbml-generator": "0.12.0",
-    "prisma-erd-generator": "2.4.2",
-    "supertest": "6.3.3",
-    "ts-jest": "29.1.1",
-    "ts-node": "10.9.2",
-    "ts-node-dev": "2.0.0",
-    "typescript": "5.3.2"
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.0",
+    "@types/supertest": "^6.0.2",
+    "@types/twilio": "^3.19.2",
+    "jest": "^29.7.0",
+    "prisma": "^5.22.0",
+    "prisma-dbml-generator": "^0.12.0",
+    "prisma-erd-generator": "^2.4.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.2"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
