--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
     "@types/nodemailer": "^7.0.3",
+    "@types/pdfkit": "^0.17.4",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -41,6 +42,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.10",
+    "pdfkit": "^0.17.2",
     "razorpay": "^2.9.2",
     "resend": "^6.6.0",
     "socket.io": "^4.5.4",
